syntax="proto3";
option java_package="org.lit";
import "google/protobuf/timestamp.proto";
message UpdateRequest{
  int32 id = 1;
  int32 userId = 2;
  string todo=3;
}
message UpdateResponse{
  string responseMessage=1;
}
message DeleteRequest{
  int32 id = 1;
}
message DeleteResponse{
  string responseMessage=1;
}
message InsertRequest{
  int32 id = 1;
  int32 userId = 2;
  string todo=3;
  string date=4;
  int32 priority=5;
  bool inProgress=6;
  bool done=7;
}
message InsertResponse{
  string responseMessage=1;
}
service lit{
  rpc Insert(InsertRequest) returns(InsertResponse);
  rpc Delete(DeleteRequest) returns(DeleteResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
}